--- a/sitemap.html
+++ b/sitemap.html
@@ -3,17 +3,17 @@
 </head>
 <body>
 <h2>Sitemap:</h2>
-<a href="sell-my-house-york-pa.html">sell my house york pa</a><br>
-<a href="sell-my-house-fast-minneapolis.html">sell my house fast minneapolis</a><br>
-<a href="sell-my-house-fast-ny.html">sell my house fast ny</a><br>
-<a href="sell-my-house-fast-georgia.html">sell my house fast georgia</a><br>
-<a href="we-buy-houses-arlington-tx.html">we buy houses arlington tx</a><br>
+<a href="prayers-to-st-joseph-for-selling-a-house.html">prayers to st joseph for selling a house</a><br>
+<a href="we-buy-houses-delray-beach.html">we buy houses delray beach</a><br>
 <a href="sell-my-house-fast-pittsburgh.html">sell my house fast pittsburgh</a><br>
-<a href="sell-my-house-fast-near-me.html">sell my house fast near me</a><br>
+<a href="sell-my-house-fast-in-denver.html">sell my house fast in denver</a><br>
+<a href="we-buy-houses-ct.html">we buy houses ct</a><br>
+<a href="sell-my-house-fast-charleston-sc.html">sell my house fast charleston sc</a><br>
 <a href="sale-my-house-quick.html">sale my house quick</a><br>
-<a href="we-buy-houses-modesto.html">we buy houses modesto</a><br>
+<a href="sellmyhouse.html">sellmyhouse</a><br>
 <a href="st-joseph-prayer-to-sell-houses.html">st joseph prayer to sell houses</a><br>
-<a href="sell-my-house-fast-ri.html">sell my house fast ri</a><br>
+<a href="sell-my-house-fast-online-quote.html">sell my house fast online quote</a><br>
+<a href="sell-my-house-fast-long-beach.html">sell my house fast long beach</a><br>
 </body>
 </html>
 
